--- a/geolocation.html
+++ b/geolocation.html
@@ -37,8 +37,8 @@
                     lat: 0,
                     lng: 0,
                     accuracy:0,
-                    targetLat: 25.033964,   //判斷目標經緯度
-                    targetLng: 121.564468,
+                    targetLat: 25.00221178,   //判斷目標經緯度
+                    targetLng: 121.4964906,
                     radius: 50,             //距離範圍限制半徑 50 公尺
                     check_result: false, 
                 }
