--- a/geolocation.html
+++ b/geolocation.html
@@ -16,8 +16,8 @@
 
             <h2>捷運站經緯度</h2>
             
-            緯度：<input type="text" v-model="targetLat">
-            經度：<input type="text" v-model="targetLng">
+            緯度：<input type="text" v-model="targetLat"><br>
+            經度：<input type="text" v-model="targetLng"><br>
 
             <h2>精準度：{{accuracy}}</h2> 
 
