--- a/geolocation.html
+++ b/geolocation.html
@@ -75,7 +75,8 @@
                         Math.cos(lat1 * Math.PI / 180) * Math.cos(lat2 * Math.PI / 180) *
                         Math.sin(dLon / 2) * Math.sin(dLon / 2);
                     const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
-                    return R * c; // 距離（公尺）
+                    
+                    return  parseInt(R * c); // 距離（公尺）
                 }
 
 
