--- a/geolocation.html
+++ b/geolocation.html
@@ -23,7 +23,7 @@
 
             <h2>{{check_result}}</h2>
 
-            <h2>與捷運站距離：{{distanc}}</h2>
+            <h2>與捷運站距離：{{distanc}} 公尺</h2>
     </div>
 </body>
 <script>
