--- a/geolocation.html
+++ b/geolocation.html
@@ -10,9 +10,9 @@
     <div id="app">
             <h1>Geolocation API Test</h1>
 
-            <h2>經度：{{lat}}</h2> 
+            <h2>緯度：{{lat}}</h2> 
 
-            <h2>緯度：{{lng}}</h2> 
+            <h2>經度：{{lng}}</h2> 
 
             <h2>捷運站經緯度</h2>
             
