--- a/geolocation.html
+++ b/geolocation.html
@@ -123,6 +123,9 @@
                     
                     this.show_stations(this.user_selected_line);
 
+                    this.user_selected_station = document.querySelector('Stations').value
+
+
                 },
 
                 get_AcessToken(){
