--- a/geolocation.html
+++ b/geolocation.html
@@ -123,7 +123,7 @@
                     
                     this.show_stations(this.user_selected_line);
 
-                    this.user_selected_station = document.querySelector('Stations').value
+                    this.user_selected_station = document.querySelector('#Stations').value
 
 
                 },
