--- a/geolocation.html
+++ b/geolocation.html
@@ -279,6 +279,9 @@
                     this.options
                 )
                 window.addEventListener('onload', this.get_AcessToken());
+                if (this.accuracy>100) {
+                        alert("位置定位不準確");
+                    }
 
             },
 
